fixed background, update show/hide to expand/collapse

--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,7 @@
 body {
   background-color: #32420F;
   background-image: url('assets/baseballField.jpg');
+  background-attachment: fixed;
   display: flex;
   flex-direction: column;
   text-align: center;
